--- a/templates/base.html
+++ b/templates/base.html
@@ -30,17 +30,13 @@ https://templatemo.com/tm-553-xtra-blog
                 <ul>
                     <li class="tm-nav-item active"><a href="/" class="tm-nav-link">
                         <i class="fas fa-home"></i>
-                        Blog Home
+                        Home
                     </a></li>
-                    <li class="tm-nav-item"><a href="/post" class="tm-nav-link">
+                    <li class="tm-nav-item"><a href="about" class="tm-nav-link">
                         <i class="fas fa-pen"></i>
-                        Single Post
+                        about
                     </a></li>
-                    <li class="tm-nav-item"><a href="/admin" class="tm-nav-link">
-                        <i class="fas fa-users"></i>
-                        About Xtra
-                    </a></li>
-                    <li class="tm-nav-item"><a href="contact.html" class="tm-nav-link">
+                    <li class="tm-nav-item"><a href="contact" class="tm-nav-link">
                         <i class="far fa-comments"></i>
                         Contact Us
                     </a></li>
