--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
         
         <div class="d-flex justify-content-between tm-pt-45">
             <span class="tm-color-primary">Travel . Events</span>
-            <span class="tm-color-primary">June 24, 2020</span>
+            <span class="tm-color-primary">{{i.created}}</span>
         </div>
         <hr>
         <div class="d-flex justify-content-between">
