--- a/templates/base.html
+++ b/templates/base.html
@@ -60,6 +60,17 @@ https://templatemo.com/tm-553-xtra-blog
     </header>
     <div class="container-fluid">
         <main class="tm-main"> 
+            <!-- Search form -->
+            <div class="row tm-row">
+                <div class="col-12">
+                    <form method="GET" action="search_db" class="form-inline tm-mb-80 tm-search-form">                   
+                        <input class="form-control tm-search-input" name="query" type="text" placeholder="Search blog..." aria-label="Search">
+                        <button class="tm-search-button" type="submit">
+                            <i class="fas fa-search tm-search-icon" aria-hidden="true"></i>
+                        </button>                                
+                    </form>
+                </div>                
+            </div>
             {% block content %}
 
             {% endblock %}
