--- a/templates/search.html
+++ b/templates/search.html
@@ -1,30 +1,30 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<div class="row tm-row">
+{% for i in post %}
     <article class="col-12 col-md-6 tm-post">
-        <a href="#" class="effect-lily tm-post-link tm-pt-10">
+        <a href="/post/{{i.pk}}" class="effect-lily tm-post-link tm-pt-10">
             <div class="tm-post-link-inner">
-                <img src="" alt="Image" class="img-fluid" style="height: 300px;">                            
+                <img src="{{i.image.url}}" alt="Image" class="img-fluid" style="height: 300px;">                            
             </div>
             <!--<span class="position-absolute tm-new-badge">New</span>-->
             <h2 class="tm-pt-30 tm-color-primary tm-post-title">{{i.title}}</h2>
 
             <p class="tm-pt-2">
-                some text about it[Read more...]
+                {{i.tagline}}[Read more...]
             </p>
         </a>                    
         
         <div class="d-flex justify-content-between tm-pt-5">
             <span class="tm-color-primary">Travel . Events</span>
-            <span class="tm-color-primary">date posted</span>
+            <span class="tm-color-primary">{{i.created}}</span>
         </div>
         <hr>
         <div class="d-flex justify-content-between">
             <span></span>
-            <span>author name</span>
+            <span>by {{i.author.name}}</span>
         </div>
     </article>
-
-</div>
+    
+    {% endfor %}
 {% endblock %}
