party logo added

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,17 +24,17 @@ https://templatemo.com/tm-553-xtra-blog
             <button class="navbar-toggler w3-cyan w3-text-white" type="button" aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
             </button><br>
-            <div class="w3-panel">
-                <!--<h5>chief john dafaan</h5>
-                <p>for member house of reps</p>
-                <p>Mikang, Shendam, Qua’an-Pan federal constituency</p>-->
+            <div class="w3-cell-row" style="margin-top: -15px;">
+
+                <div class="w3-container w3-cell" style="width:100px">
+                    <img class="d-block w-100" src="{% static 'images/apcflag.jpg' %}" alt="flag" style="border-radius: 50%; height:50px;">
+                </div>
+              
+                <div class="w3-container w3-cell">
+                  <p class="w3-text-white w3-center" style="margin-top: 20px;">Service to Humanity</p>
+                </div>  
             </div>
             <hr>
-            <!--<div class="tm-site-header">          
-                <h4 class="text-center" style="text-align: center; padding-top:30px;">Service to humanity</h4>
-                <h3 class="text-center" style="text-align: center;">2023</h3>
-            </div>-->
-            
             <nav class="tm-nav" id="tm-nav">            
                 <ul>
                     <li class="tm-nav-item"><a href="/" class="tm-nav-link">
@@ -64,20 +64,7 @@ https://templatemo.com/tm-553-xtra-blog
                     
                 </ul>
             </nav>
-            <!--<div class="tm-mb-65">
-                <a rel="nofollow" href="https://fb.com/templatemo" class="tm-social-link">
-                    <i class="fab fa-facebook tm-social-icon"></i>
-                </a>
-                <a href="https://twitter.com" class="tm-social-link">
-                    <i class="fab fa-twitter tm-social-icon"></i>
-                </a>
-                <a href="https://instagram.com" class="tm-social-link">
-                    <i class="fab fa-instagram tm-social-icon"></i>
-                </a>
-                <a href="https://linkedin.com" class="tm-social-link">
-                    <i class="fab fa-linkedin tm-social-icon"></i>
-                </a>
-            </div>-->
+            
         </div>
     </header>
     {% block search %}
@@ -112,7 +99,7 @@ https://templatemo.com/tm-553-xtra-blog
             <footer class="row tm-row">
                 <div class="w3-panel w3-center">
                     <hr>
-                    <a rel="nofollow" href="https://fb.com/templatemo" class="tm-social-link">
+                    <a rel="nofollow" href="https://web.facebook.com/profile.php?id=100063651372505" class="tm-social-link">
                         <i class="fab fa-facebook tm-social-icon"></i>
                     </a>
                     <a href="https://twitter.com" class="tm-social-link">
