--- a/templates/main.html
+++ b/templates/main.html
@@ -14,6 +14,9 @@
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -21,6 +24,15 @@
                     </div>
                     <div class="carousel-item">
                         <img class="d-block w-100" src="{% static 'images/jd0003.jpg' %}" alt="Second slide" style="border-radius: 0%; height:350px;">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="{% static 'images/jd06.jpg' %}" alt="Third slide" style="border-radius: 0%; height:350px;">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="{% static 'images/jmd1o.jpg' %}" alt="Third slide" style="border-radius: 0%; height:350px;">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="{% static 'images/jd05.jpg' %}" alt="Third slide" style="border-radius: 0%; height:350px;">
                     </div>
                     <div class="carousel-item">
                         <img class="d-block w-100" src="{% static 'images/jd06.jpg' %}" alt="Third slide" style="border-radius: 0%; height:350px;">
@@ -72,8 +84,8 @@
                 </p>
             </div>
             <a href="/contact">
-                <div class="w3-panel w3-blue w3-padding-16">
-                    <h3 class="w3-center">Join My Team</h3>
+                <div class="w3-padding-16 w3-center">
+                    <a href="/contact" class="w3-button w3-large w3-green w3-round-xxlarge w3-hover-green" style="margin-top:15px;">join my team</a>
                 </div>
             </a>
         </div>
