--- a/templates/base.html
+++ b/templates/base.html
@@ -24,17 +24,16 @@ https://templatemo.com/tm-553-xtra-blog
             <button class="navbar-toggler w3-cyan w3-text-white" type="button" aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
             </button><br>
-            <div class="w3-cell-row" style="margin-top: -15px;">
+            <!--<div class="w3-cell-row" style="margin-top: -25px;">
 
                 <div class="w3-container w3-cell" style="width:100px">
                     <img class="d-block w-100" src="{% static 'images/apcflag.jpg' %}" alt="flag" style="border-radius: 50%; height:50px;">
                 </div>
               
                 <div class="w3-container w3-cell">
-                  <p class="w3-text-white w3-center" style="margin-top: 20px;"><b>Service to Humanity</b></p>
+                  <p class="w3-text-white w3-center" style="margin-top: 6px;"><b>Service to Humanity 2023</b></p>
                 </div>  
-            </div>
-            <hr>
+            </div>-->
             <nav class="tm-nav" id="tm-nav">            
                 <ul>
                     <li class="tm-nav-item"><a href="/" class="tm-nav-link">
