--- a/templates/main.html
+++ b/templates/main.html
@@ -1,13 +1,18 @@
 {% extends 'base.html' %}
 {% load static %}
     {% block donate %}
-    <div class="w3-panel w3-cyan w3-padding-16 tm-main" style="margin-top: 0px;">
-        <a href="/support"><h4 class="w3-center w3-text-white">DONATE</h4></a>
+    <div class="w3-display-container w3-cyan w3-padding-16 tm-main" style="height: 80px; display:inline-flex;">
+        <div style="padding-bottom:15px;">
+            <a href="/support"><h4 class="w3-center w3-text-white" style="padding-left:130px;">DONATE</h4></a>
+        </div>
+        <div class="w3-right" style="width:50px; margin-left:95px; margin-top:-0px;">
+            <img class="d-block w-100" src="{% static 'images/apcflag.jpg' %}" alt="flag" style="border-radius: 50%; height:50px;">
+        </div>
     </div>
     {% endblock %}
 
     {% block image %}
-    <div>
+    <div style="margin-top:15px;">
         <div class="row">
             <div class="col-md-12 carousel slide" id="carouselExampleIndicators" data-ride="carousel">
                 <ol class="carousel-indicators">
@@ -16,23 +21,22 @@
                     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="{% static 'images/jd04.jpg' %}" alt="Image1" class="d-block w-100" style="border-radius: 0%; height:450px;">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="{% static 'images/jd0003.jpg' %}" alt="Second slide" style="border-radius: 0%; height:450px;">
+                        <img class="d-block w-100" src="{% static 'images/jmdo7.jpg' %}" alt="slide" style="border-radius: 0%; height:450px;">
                     </div>
                     <div class="carousel-item">
                         <img class="d-block w-100" src="{% static 'images/jmd1o.jpg' %}" alt="slide" style="border-radius: 0%; height:450px;">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="{% static 'images/jd05.jpg' %}" alt="slide" style="border-radius: 0%; height:450px;">
+                        <img class="d-block w-100" src="{% static 'images/jd0003.jpg' %}" alt="Second slide" style="border-radius: 0%; height:450px;">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="{% static 'images/jmdo7.jpg' %}" alt="slide" style="border-radius: 0%; height:450px;">
+                        <img class="d-block w-100" src="{% static 'images/jd05.jpg' %}" alt="slide" style="border-radius: 0%; height:450px;">
                     </div>
                 </div>
             </div>
@@ -59,7 +63,7 @@
     
     <div class="w3-panel w3-light-gray" style="margin-top:-16px;">
         <div class="rn w3-padding-64 w3-round-large" style="padding: 30px;">
-            <h1 class="w3-text-pink w3-center" style="text-align:center;"><strong><b>WHY I'M RUNNING</b></strong></h1><br>
+            <h1 class="w3-text-red w3-center" style="text-align:center;"><strong><b>WHY I'M RUNNING</b></strong></h1><br>
             <div>
                 <p class="mb-0 tm-line-height-short w3-text-black w3-center" style="font-size: 17px;">
                     <strong>
