--- a/templates/base.html
+++ b/templates/base.html
@@ -34,8 +34,12 @@ https://templatemo.com/tm-553-xtra-blog
                   <p class="w3-text-white w3-center" style="margin-top: 6px;"><b>Service to Humanity 2023</b></p>
                 </div>  
             </div>-->
-            <nav class="tm-nav" id="tm-nav">            
+            <nav class="tm-nav" id="tm-nav">          
                 <ul>
+                    <div class="w3-padding-16 w3-center" style="margin-left: 15px; margin-top:-35px;">
+                        <h6 class="w3-text-white w3-center" style="font-size:20px;">#JMD2023</h6> 
+                        <hr>
+                    </div> 
                     <li class="tm-nav-item"><a href="/" class="tm-nav-link">
                         <i class="fas fa-home"></i>
                         Home
