--- a/templates/main.html
+++ b/templates/main.html
@@ -45,7 +45,7 @@
     {% endblock %}
 
     {% block content %}
-    <div class="w3-panel w3-indigo w3-padding-64" style="width:100%; margin-top:0px;">
+    <div class="w3-panel w3-indigo w3-padding-64 back" style="width:100%; margin-top:0px;">
         <div>
             <h1 class="w3-text-white w3-center"><strong>Chief</strong></h1>
             <h1 class="w3-text-white w3-center"><strong>John</strong></h1>
@@ -54,9 +54,10 @@
             
         </div>
         <br>
-        <div>
-            <p class="w3-text-white w3-center" style="font-size: 17px;">
-                <strong>As your representative, I will put the people first, and I will lead with you, your family and community in mind. I will focus on policy legislation and funding that will positively impact our constituency and improve the lives of our people.</strong>
+        <div class="anim">
+            <p class="w3-text-white" style="font-size: 17px;">
+                <strong>As your representative, I will put the people first, and I will lead with you, your family and community in mind.
+                I will focus on policy legislation and funding that will positively impact our constituency and improve the lives of our people.</strong>
             </p>
         </div>                           
     </div>          
@@ -68,11 +69,11 @@
                 <p class="mb-0 tm-line-height-short w3-text-black w3-center" style="font-size: 17px;">
                     <strong>
                         Our Constituency covers Mikang, Qua’an-Pan and Shendam Local Government
-                        Councils which is an Agricultural hub in Plateau State that brings people from every state to this area.
+                        Areas which is an Agricultural hub in Plateau State that brings people from every state to this area.
                         We are a diverse people living in rural and urban areas.
                         I will represent all the people of the constituency. 
                         I will bring integrity, truth, and unity back to our constituency. 
-                        I will break barriers and bread with the people, 
+                        I will break barriers with the people 
                         and I will build the bridges needed to connect our people and our communities. 
                         I will move Mikang, Qua’an-Pan, Shendam constituency into the future by collaborating with government at all levels, 
                         traditional and religious leaders, 
